ros2_ws/log/build_2024-08-13_12-39-34/serial_communicator/stdout_stderr.log
[ 50%] Built target simple_serial
[ 75%] Building CXX object CMakeFiles/serial_node.dir/src/serial_node.cpp.o
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/serial_node.cpp:79:25: error: expected ';' at end of declaration
        std::string data
                        ^
                        ;
1 error generated.
make[2]: *** [CMakeFiles/serial_node.dir/build.make:76: CMakeFiles/serial_node.dir/src/serial_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:139: CMakeFiles/serial_node.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
